2014-10-13 Added stopwatch, clock and changed view of panel in IWB Toolbar module
2014-10-13 Added new property: Real-time navigationbar-page-ok to Navigation Bar
2014-10-13 Fixed issue with getting JS representation of Check Button module
2014-10-13 Fixed showing Layered Image module on IOS 8.0.2
2014-10-09 Fixed issue with symbols in dropdown gaps for Table module
2014-10-09 Fixed issue with double lines in Connection module
2014-10-09 Added new version of Swiffy Animation module and swiffy library.
2014-10-09 Added Show Answers to Crossword module
2014-10-08 Fixed issue with double lines in Connection module
2014-10-06 Removed console.log from Text module
2014-10-06 Added Show Answers to Table module
2014-10-06 Removed unused libraries
2014-10-06 Added Show Answers to Writing Calculations module
2014-10-06 Added Show Answers to Basic Math Gaps module
2014-10-03 Fixed problem with Connection in editor preview
2014-10-03 Fixed problem with apostrophes in gaps are being worked with eKeyboard
2014-10-01 Fixed problem with gaps being enabled regardless of initial configuration after Reset in Text module
2014-10-01 Fixed issiue with lines on Android 4.1.2 in Connection module
2014-10-01 Fixed issues with loading Adobe Edge Animation JavaScript Runtime in Edge Animation module
2014-10-01 Fixed problems with configuration in Paragraph module
2014-09-30 Fixed blocked gaps issue in response to ShowAnswers event in Text module
2014-09-29 Added blocking on Check in Coloring module
2014-09-29 Fixed activity in Show Answers mode in Coloring, Connection and Image Identification modules.
2014-09-29 Fixed problem with libraries and date in IWB Toolbar module.
2014-09-29 Fixed problem with Play button in Slideshow module after changing slides
2014-09-29 Fixed placement of Next and Report buttons in Navigation Bar module
2014-09-26 Fixed restoring user selection after CheckAnswers event in ShowAnswers mode in Text Selection module